# OpenCEP

./: .gitignore  pyproject.toml  setup.cfg
examples/: demo.ipynb
plan/multi/local_search/: MultiPatternGraph.py  StateNode.py
src/opencep/: CEP.py
src/opencep/adaptive/optimizer/: DeviationAwareTesterFactory.py  Optimizer.py  (+1 more)
src/opencep/base/: Event.py  Pattern.py  PatternMatch.py  PatternStructure.py
src/opencep/condition/: BaseRelationCondition.py  CompositeCondition.py  Condition.py  KCCondition.py
src/opencep/evaluation/: EvaluationMechanism.py  EvaluationMechanismFactory.py
src/opencep/misc/: ConsumptionPolicy.py  DefaultConfig.py  LegacyStatistics.py  StateBasedLoadShedder.py  StudentMetrics.py  Utils.py
src/opencep/parallel/: EvaluationManagerFactory.py  ParallelExecutionParameters.py  PlatformFactory.py
src/opencep/plan/: BushyTreeBuilders.py  LeftDeepTreeBuilders.py  TreeCostModel.py  TreePlan.py  TreePlanBuilder.py  TreePlanBuilderFactory.py
src/opencep/stream/: FileStream.py  Stream.py
src/opencep/transformation/: PatternPreprocessingParameters.py  PatternPreprocessor.py  PatternTransformer.py
src/opencep/tree/: MultiPatternTree.py  PatternMatchStorage.py  Tree.py
test/: BasicTests.py  EvalTestsDefaults.py  EventProbabilityTests.py  KC_tests.py  LocalSearchTests.py  MultiPattern_tests.py  NegationTests.py  NestedTests.py  OptimizerTests.py  ParallelTests.py  PolicyTests.py  StorageTests.py  TreeConstructionTests.py  TwitterTest.py  testUtils.py
test/UnitTests/: RuleTransformationTests.py  array_test.py  test_storage.py
(+48 files in other folders)
