[metadata]
name = opencep
version = 0.0.0
description = Complex Event Processing engine (OpenCEP)
long_description = file: README.md
long_description_content_type = text/markdown
author = OpenCEP contributors
url = https://github.com/benyucong/OpenCEP
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
zip_safe = false

# Expose the top-level module CEP.py as a module
py_modules =
    CEP

[options.packages.find]
where =
    .
exclude =
    test

[options.package_data]
* = *.txt, *.md, *.png
